# rules_proto_grpc

./: .gitignore  WORKSPACE  aspect.bzl  plugin.bzl
example/proto/: BUILD.bazel  foo.proto
python/: defs.bzl  python_grpc_library.bzl  python_proto_library.bzl  pyz_proto_library.bzl
python/example/routeguide/: BUILD.bazel  hello_bin.py
