load("//python:defs.bzl", "python_grpc_library", "python_proto_compile", "python_proto_library", "pyz_proto_library")

pyz_proto_library(
    name = "person_pyz_proto",
    deps = [":person_proto"],
    visibility = [
        "//visibility:public",
    ],
)

pyz_proto_library(
    name = "place_pyz_proto",
    deps = [":place_proto"],
    visibility = [
        "//visibility:public",
    ],
)

pyz_proto_library(
    name = "foo_pyz_proto",
    deps = [":foo_proto"],
    visibility = [
        "//visibility:public",
    ],
)

proto_library(
    name = "foo_proto",
    srcs = [
        "foo.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
)

proto_library(
    name = "person_proto",
    srcs = [
        "person.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":place_proto",
    ],
)

proto_library(
    name = "place_proto",
    srcs = [
        "place.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":thing_proto",
    ],
)

proto_library(
    name = "thing_proto",
    srcs = [
        "thing.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
)

proto_library(
    name = "empty_proto",
    srcs = [
        "empty.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
)

proto_library(
    name = "routeguide_proto",
    srcs = [
        "routeguide.proto",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "routeguide_features",
    srcs = [
        "routeguide_features.json",
    ],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "greeter_grpc",
    srcs = [
        "greeter.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
)
